[package]
name = "stellaroid"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "25.3.0"

[dev-dependencies]
soroban-sdk = { version = "25.3.0", features = ["testutils"] }

# --- ADD THIS TO FIX THE ARBITRARY ERROR ---
[patch.crates-io]
arbitrary = { git = "https://github.com/rust-fuzz/arbitrary", tag = "v1.3.2" }
derive_arbitrary = { git = "https://github.com/rust-fuzz/arbitrary", tag = "v1.3.2" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = false
panic = "abort"