[package]
name = "stellaroid"
version = "0.1.0"
edition = "2021"
rust-version = "1.81.0"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
# We use = to LOCK these versions. This stops Cargo from 
# automatically downloading the 'Edition 2024' updates.
soroban-sdk = "=25.3.0"
base64ct = "=1.7.3"
const-oid = "=0.9.6"
der = "=0.7.9"

[dev-dependencies]
soroban-sdk = { version = "=25.3.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = false
panic = "abort"